# univAI_memoir

./: .gitignore  readme.org
aiFoundations/: .envrc  noteBits.org  pyproject.toml
experienceAI/: oneDayConf.org
