[tool.poetry]
name = "aifoundations"
version = "0.1.0"
description = "A set of libraries for the AI course"
authors = ["HaoZeke <rohit.goswami@aol.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
keras = "^2.2"
numpy = "^1.16"
pandas = "^0.24.2"
seaborn = "^0.9.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
